test git commands

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="..." /></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
-                            <h4>Structured Yet Flexible</h4>
+                            <h4>Structured And Flexible</h4>
                             <p class="text-black-50 mb-0">
                                 Everyone is unique, and flight training should reflect that. 
                                 Based on established training syllabi, 
